--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "license": "MIT",
   "devDependencies": {
     "@types/axios": "^0.14.0",
+    "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.13",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.5.2"
